syntax = "proto3";

package treatment;

// SERVICES ===================================================================

service TreatmentService {
  // Dummy example
  // rpc FindOne (InstanceById) returns (Instance);
  // rpc FindMany (stream InstanceById) returns (stream Instance);

  // Real life
  rpc CreateInstance (CreateInstanceReq) returns (Instance);
}

// COMPONENTS =================================================================

message Instance {
  uint32 id = 1;
  uint32 doctor_id = 2;
  uint32 patient_id = 3;
  InstanceStatus status = 4;
  string schema_instance_id = 5;
  string started_at = 6;
  string finished_at = 7;
  string deleted_at = 8;
}

enum InstanceStatus {
  INSTANCE_STATUS_UNSPECIFIED = 0;
  INSTANCE_STATUS_RUNNING = 1;
  INSTANCE_STATUS_BLOCKED = 2;
  INSTANCE_STATUS_COMPLETED = 3;
  INSTANCE_STATUS_CANCELLED = 4;
}

// REQUESTS ===================================================================

message CreateInstanceReq {
  // Schema schema = 1;
  uint32 patient_id = 1;
  uint32 doctor_id = 2;
}

message InstanceById {
  uint32 id = 1;
}

// RESPONSES ==================================================================

